@@ -1,3 +1,8 @@
+2008-04-16  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* src/vinagre-notebook.c: make the notebook tab close buttons smaller to
+	save some vertical space
+
 2008-04-16  Jonh Wendell <jwendell@gnome.org>
 
 	Provide a 'read only' mode. Closes #509945.
